--- a/src/pages/cs46x/index.astro
+++ b/src/pages/cs46x/index.astro
@@ -2,8 +2,8 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="CS 46x Senior Software Engineering Project | Alex Ulbrich">
+<Layout title="CS 46x Software Engineering II | Alex Ulbrich">
   <main class="m-auto max-w-prose p-6">
-    <h1 class="text-3xl font-bold">CS 46x Senior Software Engineering Project</h1>
+    <h1 class="text-3xl font-bold">CS 312 Software Engineering II</h1>
   </main>
 </Layout>
